[gd_scene load_steps=3 format=3 uid="uid://uwy2fkrmrvq7"]

[ext_resource type="Script" uid="uid://dwayiopjdr0wg" path="res://scripts/lever.gd" id="1_fs5lv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tj57q"]
size = Vector2(64, 32)

[node name="Lever" type="Node2D"]
script = ExtResource("1_fs5lv")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_tj57q")

[node name="on_base" type="Polygon2D" parent="."]
color = Color(0.408329, 0.408329, 0.408329, 1)
polygon = PackedVector2Array(-32, -16, -32, 16, 32, 16, 32, -16)

[node name="on_stick" type="Polygon2D" parent="."]
color = Color(0.514022, 0.243894, 0.151172, 1)
polygon = PackedVector2Array(-24, -8, -32, 0, -24, 8, 0, 8, 0, -8)

[node name="on_gap" type="Polygon2D" parent="."]
color = Color(0.205117, 0.205117, 0.205117, 1)
polygon = PackedVector2Array(24, -8, 0, -8, 0, 8, 24, 8)

[node name="off_base" type="Polygon2D" parent="."]
visible = false
color = Color(0.408329, 0.408329, 0.408329, 1)
polygon = PackedVector2Array(-32, -16, -32, 16, 32, 16, 32, -16)

[node name="off_gap" type="Polygon2D" parent="."]
visible = false
color = Color(0.205117, 0.205117, 0.205117, 1)
polygon = PackedVector2Array(0, -8, -24, -8, -24, 8, 0, 8)

[node name="off_stick" type="Polygon2D" parent="."]
visible = false
color = Color(0.514022, 0.243894, 0.151172, 1)
polygon = PackedVector2Array(24, -8, 32, 0, 24, 8, 0, 8, 0, -8)
